force-app/main/default/objects/Commission_Slab__c/Commission_Slab__c.object-meta.xml
<CustomObject>
    <label>Commission Slab</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Commission Slab Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Slab</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>