force-app/main/default/objects/Commission_Slab__c/fields/Booking_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Booking_Criteria__c</fullName>
    <label>Booking Criteria</label>
    <length>200</length>
    <type>Text</type>
</CustomField>