force-app/main/default/objects/Commission_Slab__c/fields/Commission_Factor__c.field-meta.xml
<CustomField>
    <fullName>Commission_Factor__c</fullName>
    <label>Commission Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>