force-app/main/default/objects/Commission_Slab__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Commission Slab</relationshipLabel>
    <relationshipName>Commission_Slab</relationshipName>
    <type>Lookup</type>
</CustomField>